--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -327,6 +327,14 @@
                 </dd>
                 <dd><a href="tel:888-777-7777" aria-label="Phone number of Big Star New York City: 8 8 8. 7 7 7. 7 7 7 7."><span itemprop="telephone">(888) 777-7777</span></a></dd>
               </div>
+              <div itemscope itemtype="https://schema.org/LocalBusiness" itemref="hq">
+                <dt itemprop="name">Big Star Chicago</dt>
+                <dd itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+                  <span itemprop="streetAddress">123 E. Chicago Ave.</span><br>
+                  <span itemprop="addressLocality">Chicago</span>, <span itemprop="addressRegion">IL</span> <span itemprop="postalCode">60611</span>
+                </dd>
+                <dd><a href="tel:888-888-8888" aria-label="Phone number of Big Star Chicago: 8 8 8. 8 8 8. 8 8 8 8."><span itemprop="telephone">(888) 888-8888</span></a></dd>
+              </div>
             </dl>
           </section>
         </section><!-- / #contact -->
