Edits to About page text

--- a/About.html
+++ b/About.html
@@ -164,14 +164,14 @@
             </ul>
           </section>
           <h1>What we do</h1>
-          <p>We go to the far reaches of the galaxy to bring top quality, authentic, and rare collectibles right to your door.</p>
+          <p>We travel to the far reaches of the galaxy to bring top quality, authentic, and rare collectibles right to your door.</p>
           <section>
             <h2>Design and sell</h2>
-            <p>The most apparent of our activities is designing and selling collectibles that reflect what our customers enjoy and want. Our team of product designers analyze and speculate new collectibles based on customer and market feedback. And we love surprising you.</p>
+            <p>We design and sell collectibles that reflect what our customers enjoy and want. Our team of product designers analyze and speculate new collectibles based on customer and market feedback. And we love surprising you.</p>
           </section>
           <section>
             <h2>Search and broker</h2>
-            <p>For a fee, our experts can assist you in finding a particular Big Star Collectibles item that you have been looking for. Big Star Collectibles can also broker sales and trades among our customers.</p>
+            <p>For a fee, our experts can assist you in finding a particular Big Star Collectibles item. Big Star Collectibles can also broker sales and trades among our customers.</p>
           </section>
           <section>
             <h2>Educate</h2>
