--- a/Character-Detail-Delores.html
+++ b/Character-Detail-Delores.html
@@ -152,7 +152,7 @@
             <p>Forensic Accountant</p>
           </hgroup>
         </header>
-        <p>Dolores robot is a computational genius who performs calculations for various Binaryville businesses and organizations. In her spare time, Dolores has been noodling on the creation of the perfect web browser that will make all other browsers obsolete. We're rooting for you, Dolores!</p>
+        <p>Delores robot is a computational genius who performs calculations for various Binaryville businesses and organizations. In her spare time, Delores has been noodling on the creation of the perfect web browser that will make all other browsers obsolete. We're rooting for you, Delores!</p>
         <dl>
           <div>
             <dt>Neighborhood of origin</dt>
@@ -507,7 +507,7 @@
           </div>
           <div>
             <dt><a href="Product-Detail.html">Delores Apron</a></dt>
-            <dd><a href="Product-Detail.html" role="presentation" tabindex="-1"><img src="images/products/binaryville-apron-dolores-white.svg" alt="A white Dolores apron" style="padding: 0 10.357%;"></a></dd>
+            <dd><a href="Product-Detail.html" role="presentation" tabindex="-1"><img src="images/products/binaryville-apron-dolores-white.svg" alt="A white Delores apron" style="padding: 0 10.357%;"></a></dd>
             <dd class="offer">$24.00</dd>
             <dd class="rating">
               <img src="images/icon-rating-star-purpleviolet.svg" width="16" height="16" alt="">
