Edit text on About page

--- a/About.html
+++ b/About.html
@@ -157,7 +157,7 @@
               <li>Build our company in the best way possible.</li>
               <li>Imagine and innovate to avoid inertia.</li>
               <li>Give customers the respect they deserve.</li>
-              <li>Serve to make us all better by being socially responsible.</li>
+              <li>Be socially responsible.</li>
               <li>Take pride in your team’s talents.</li>
               <li>Always act with integrity.</li>
               <li>Remember to have fun.</li>
@@ -175,7 +175,7 @@
           </section>
           <section>
             <h2>Educate</h2>
-            <p>Besides being able to assess a piece or collection for its authenticity, we also take great care in educating our customers and potential customers on the nuances of fake or altered collectibles.</p>
+            <p>In addition to assessing a piece or collection for its authenticity, we also take great care in educating our customers and potential customers on the nuances of fake or altered collectibles.</p>
           </section>
           <section>
             <h2>Consult</h2>
