Fix typo in address of Chicago location

--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Big Star Collectibles provides unique, high-quality, authentic collectible items.">
-    <title>Contact us | Big Star Collectibles</title>
+    <title>Contact Us | Big Star Collectibles</title>
 
     <!-- stylesheets -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -330,7 +330,7 @@
               <div itemscope itemtype="https://schema.org/LocalBusiness" itemref="hq">
                 <dt itemprop="name">Big Star Chicago</dt>
                 <dd itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-                  <span itemprop="streetAddress">123 E. Chicago Ave.</span><br>
+                  <span itemprop="streetAddress">123 W. Chicago Ave.</span><br>
                   <span itemprop="addressLocality">Chicago</span>, <span itemprop="addressRegion">IL</span> <span itemprop="postalCode">60611</span>
                 </dd>
                 <dd><a href="tel:888-888-8888" aria-label="Phone number of Big Star Chicago: 8 8 8. 8 8 8. 8 8 8 8."><span itemprop="telephone">(888) 888-8888</span></a></dd>
