Minor text edit to About page

--- a/About.html
+++ b/About.html
@@ -175,7 +175,7 @@
           </section>
           <section>
             <h2>Educate</h2>
-            <p>Besides being able to assess a piece or collection for its authenticity, we also take great care in educating our customers and potential customers on the nuances of fake or altered collectibles.</p>
+            <p>Besides being able to assess a piece or collection for its authenticity, we also take great care in educating our customers on the nuances of fake or altered collectibles.</p>
           </section>
           <section>
             <h2>Consult</h2>
