Write out 'AKA' on index page

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <dt id="name-cloudmaster">CloudMaster</dt>
             <dd class="title">Cloud Engineer</dd>
             <dd class="avatar"><img src="images/characters/avatar-Tech-Heroes-CloudMaster.png" width="200" height="200" alt="Avatar of CloudMaster"></dd>
-            <dd class="desc">Owen, AKA the "CloudMaster," soars above the technological skies offering cloud infrastructure support wherever it's needed. Owen also excels at standup comedy and is considered by many to be a real hoot.</dd>
+            <dd class="desc">Owen, also known as the "CloudMaster," soars above the technological skies offering cloud infrastructure support wherever it's needed. Owen also excels at standup comedy and is considered by many to be a real hoot.</dd>
             <dd><a href="#" id="more-cloudmaster" aria-labelledby="more-cloudmaster name-cloudmaster">See bio and products</a></dd>
           </div>
           <div data-full-img="images/characters/Tech-Heroes-Commander-Zoom.svg">
