Edits to About page Consult section

--- a/About.html
+++ b/About.html
@@ -179,7 +179,7 @@
           </section>
           <section>
             <h2>Consult</h2>
-            <p>We welcome your inquiries about products and collectibles from other sources. Our experts can give you an idea of an item’s sale and retail price points, as well as calculate the cash basis for insurance against theft or damage. These consults are done one-on-one with you to retain your privacy, either in our studio or via 3D-video chat. Contact us today to set up an appointment.</p>
+            <p>We welcome your inquiries about products and collectibles from other sources. Our experts can estimate an item’s sale and retail price, as well as calculate the cash basis for insurance against theft or damage. These consults are done one-on-one with you to retain your privacy, either in our studio or via 3D-video chat. Contact us to set up an appointment.</p>
           </section>
         </section><!-- / #about -->
 
