Cart.html: change 'TBD' to mdash

--- a/Cart.html
+++ b/Cart.html
@@ -237,7 +237,7 @@
               </tr>
               <tr>
                 <th scope="row">Sales Tax <small>(calculated at checkout)</small></th>
-                <td>TBD</td>
+                <td>&mdash;</td>
               </tr>
             </tbody>
             <tfoot>
