Update Blade profile

--- a/Character-Detail-Blade.html
+++ b/Character-Detail-Blade.html
@@ -160,11 +160,11 @@
           </div>
           <div>
             <dt>Favorite food</dt>
-            <dd>cabbage rolls</dd>
+            <dd>burritos</dd>
           </div>
           <div>
             <dt>Favorite music genre</dt>
-            <dd>Classic Country</dd>
+            <dd>Funk</dd>
           </div>
           <div>
             <dt>Hobby</dt>
