Updates Delores profile

--- a/Character-Detail-Delores.html
+++ b/Character-Detail-Delores.html
@@ -160,11 +160,11 @@
           </div>
           <div>
             <dt>Favorite food</dt>
-            <dd>toasted marshmallows</dd>
+            <dd>pizza</dd>
           </div>
           <div>
             <dt>Favorite music genre</dt>
-            <dd>J-pop</dd>
+            <dd>New Wave</dd>
           </div>
           <div>
             <dt>Hobby</dt>
